--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "heroku": "^8.7.1",
     "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.1",
     "method-override": "^3.0.0",
